2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/expiry.c, man/expiry.1.xml: Add support for long options.
	* src/expiry.c, man/expiry.1.xml: Add -h/--help option

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c, man/chfn.1.xml: Add support for long options.
	* src/chfn.c, man/chfn.1.xml: Add -u/--help option
	* NEWS, src/chfn.c, man/chfn.1.xml: Add --root option.

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/vipw.c, man/vipw.8.xml: Add --root option.

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/faillog.c, man/faillog.8.xml: Add --root option.
	* NEWS, src/lastlog.c, man/lastlog.8.xml: Likewise.
	* src/faillog.c: Add Prog variable, and prefix error messages with
	Prog rather than "faillog".
	* src/lastlog.c: Likewise.
	* src/lastlog.c: Split usage in smaller messages.

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/chage.c, man/chage.1.xml: Add --root option. Open
	audit and syslog after the potential chroot. chage's usage split
	in smaller messages.

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: re-indent.
	* src/login.c: Fix support for sub-logins.

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c, src/chage.c, src/newusers.c, src/su.c: The getopt
	index of long options is not used.

2011-10-29  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/Makefile.am, libmisc/root_flag.c,
	po/POTFILES.in: Add process_root_flag() to process the --root
	option and chroot so that the chroot config is used and changes
	are applied to the chroot.
	* NEWS, src/useradd.c, man/useradd.8.xml: Add --root option. Open
	audit after the potential chroot.
	* NEWS, src/userdel.c, man/userdel.8.xml: Add --root option. Open
	audit and syslog after the potential chroot. userdel's usage split
	in smaller messages.