@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
    Copyright (c) 1992       , Julianne Frances Haugh
-   Copyright (c) 2007 - 2009, Nicolas François
+   Copyright (c) 2007 - 2011, Nicolas François
    All rights reserved.
   
    Redistribution and use in source and binary forms, with or without
@@ -55,8 +55,7 @@
   <refsynopsisdiv id='synopsis'>
     <cmdsynopsis>
       <command>pwck</command>
-      <arg choice='opt'>-q </arg>
-      <arg choice='opt'>-s </arg>
+      <arg choice='opt'>options</arg>
       <arg choice='opt'>
 	<arg choice='plain'>
 	  <replaceable>passwd</replaceable>
@@ -65,21 +64,6 @@
 	  <arg choice='plain'>
 	    <replaceable>shadow</replaceable>
 	  </arg>
-	</arg>
-      </arg>
-    </cmdsynopsis>
-    <cmdsynopsis>
-      <command>pwck</command>
-      <arg choice='opt'>-q </arg>
-      <arg choice='opt'>-r </arg>
-      <arg choice='opt'>
-	<arg choice='plain'>
-	  <replaceable>passwd</replaceable>
-	</arg>
-	<arg choice='opt'>
-	<arg choice='plain'>
-	  <replaceable>shadow</replaceable>
-	</arg>
 	</arg>
       </arg>
     </cmdsynopsis>
@@ -172,13 +156,21 @@
   <refsect1 id='options'>
     <title>OPTIONS</title>
     <para>
+      The <option>-r</option> and <option>-s</option> options cannot be
+      combined.
+    </para>
+    <para>
       The options which apply to the <command>pwck</command> command are:
     </para>
     <variablelist remap='IP'>
       <varlistentry>
-	<term>
-	  <option>-q</option>
-	</term>
+	<term><option>-h</option>, <option>--help</option></term>
+	<listitem>
+	  <para>Display help message and exit.</para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><option>-q</option>, <option>--quiet</option></term>
 	<listitem>
 	  <para>
 	    Report errors only. The warnings which do not require any
@@ -187,9 +179,7 @@
 	</listitem>
       </varlistentry>
       <varlistentry>
-	<term>
-	  <option>-r</option>
-	</term>
+	<term><option>-r</option>, <option>--read-only</option></term>
 	<listitem>
 	  <para>
 	    Execute the <command>pwck</command> command in read-only mode.
@@ -197,9 +187,7 @@
 	</listitem>
       </varlistentry>
       <varlistentry>
-	<term>
-	  <option>-s</option>
-	</term>
+	<term><option>-s</option>, <option>--sort</option></term>
 	<listitem>
 	  <para>
 	    Sort entries in <filename>/etc/passwd</filename> and
